# websocket_basic

./: .gitignore  TODO  pyproject.toml
apps/: consumers.py  models.py  serializers.py  urls.py  views.py
apps/consumers/: __init__.py  base.py  main.py
apps/models/: __init__.py  managers.py  users.py
root/: asgi.py  drf_settings.py  settings.py  urls.py
